updated contact link target

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <li>Playing with my baby</li>
   </ul>
   <br><br>
-  <a href="contact.html">Contact Me</a>
+  <a href="contact.html" target="blank">Contact Me</a>
 </body>
 
 </html>
