Changed name and schooling to keep me un-findable
Also fixed 2 typos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Dave's personal HTML site</title>
+  <title>Davey's personal HTML site</title>
 </head>
 
 <body>
@@ -11,18 +11,18 @@
     <tr>
       <td><img src="29560476.jpeg" alt="me and a fish" /></td>
       <td>
-        <h1>David Harms</h1>
+        <h1>Dewey Ham</h1>
         <p><em>Educator and aspiring programmer</em></p>
       </td>
     </tr>
   </table>
   <hr>
-  <p>This is where I would type a short biography. I don't llike to talk about myself, so I won't put much here. I just want to see how much I can write before the text overflows.</p> <!-- insert bio here -->
+  <p>This is where I would type a short biography. I don't like to talk about myself, so I won't put much here. I just want to see how much I can write before the text overflows.</p> <!-- insert bio here -->
   <hr>
   <h3>Education and Teaching</h3>
   <ul>
-    <li>Colorado Technical University: BS in criminal justice</li>
-    <li>Western Governors University: MA in sceince education</li>
+    <li>School of Hard Knocks: BA in Awesomeness</li>
+    
     <li>Lots of other schools with various majors</li>
   </ul>
   <hr>
